--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "sorethea/lam",
+    "name": "sorethea/lam-module",
+    "type": "laravel-module",
     "description": "",
     "authors": [
         {
@@ -9,7 +10,9 @@
     ],
     "extra": {
         "laravel": {
-            "providers": [],
+            "providers": [
+                "Modules\\LAM\\Providers\\LAMServiceProvider"
+            ],
             "aliases": {
 
             }
