--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,14 @@
         "psr-4": {
             "Modules\\LAM\\": ""
         }
+    },
+    "require": {
+        "php": ">=8.0",
+        "filament/spatie-laravel-settings-plugin":"2.*",
+        "laravel/framework": "~9.0",
+        "spatie/laravel-permission": "5.*",
+        "spatie/laravel-medialibrary": "10.*",
+        "spatie/laravel-activitylog": "4.*",
+        "spatie/laravel-settings": "2.*"
     }
 }
