--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
     "require": {
         "php": ">=8.0",
         "filament/spatie-laravel-settings-plugin":"2.*",
+        "filament/spatie-laravel-media-library-plugin": "2.*",
+        "nwidart/laravel-modules": "9.*",
         "spatie/laravel-permission": "5.*",
         "spatie/laravel-medialibrary": "10.*",
         "spatie/laravel-activitylog": "4.*",
